--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^2.0.0",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "mongoose": "^5.0.12"
   }
 }
